<update>[footer]:"update qr code and what's app button"

--- a/about.html
+++ b/about.html
@@ -1,28 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us - Gearkingdom</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="about-section">
-            <!-- about section content -->
-        </section>
-    </main>
-    <footer>
-        <div class="footer-section">
-            <h3>Contact</h3>
-            <p><strong>Email:</strong> Jonas285797@gmail.com</p>
-            <p><strong>Phone:</strong> +86 
+  <header>
+    <nav>
+      <div class="logo">Gearkingdom</div>
+      <div class="nav-links">
+        <a href="/">Home</a>
+        <a href="/gears.html">Gears</a>
+        <a href="/about.html" class="active">About Us</a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="about-hero">
+      <div class="hero-content">
+        <h1>Our Story</h1>
+        <p>Building a sustainable future through innovation</p>
+      </div>
+    </section>
+
+    <section class="about-content">
+      <div class="about-grid">
+        <div class="about-card">
+          <div class="about-icon">
+            <svg width="64" height="64" viewBox="0 0 64 64">
+              <circle cx="32" cy="32" r="30" fill="none" stroke="currentColor" stroke-width="2"/>
+              <path d="M32 16v16l8 8" fill="none" stroke="currentColor" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Our History</h3>
+          <p>Founded in 2020, Gearkingdom has grown from a small startup to a leading provider of high-quality gear and equipment. Our journey began with a simple mission: to provide exceptional products while maintaining our commitment to sustainability.</p>
+        </div>
+
+        <div class="about-card">
+          <div class="about-icon">
+            <svg width="64" height="64" viewBox="0 0 64 64">
+              <path d="M32 8l8 16h16l-12 12 4 16-16-8-16 8 4-16-12-12h16z" fill="none" stroke="currentColor" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Our Values</h3>
+          <p>Quality, innovation, and customer satisfaction are at the heart of everything we do. We believe in creating products that not only meet but exceed our customers' expectations while maintaining our commitment to environmental responsibility.</p>
+        </div>
+
+        <div class="about-card">
+          <div class="about-icon">
+            <svg width="64" height="64" viewBox="0 0 64 64">
+              <path d="M16 32c0-8.837 7.163-16 16-16s16 7.163 16 16-7.163 16-16 16" fill="none" stroke="currentColor" stroke-width="2"/>
+              <path d="M32 32v16M32 32l8-8" fill="none" stroke="currentColor" stroke-width="2"/>
+            </svg>
+          </div>
+          <h3>Our Mission</h3>
+          <p>To provide innovative and sustainable solutions that enhance our customers' lives while minimizing our environmental impact. We strive to be a leader in eco-friendly product development and manufacturing.</p>
+        </div>
+      </div>
+
+      <div class="team-section">
+        <h2>Our Services</h2>
+        <div class="team-grid">
+          <div class="service-item">
+            <div class="service-icon">
+              <svg width="64" height="64" viewBox="0 0 64 64">
+                <path d="M12 40c0 0 5-10 20-10s20 10 20 10" fill="none" stroke="currentColor" stroke-width="4"/>
+                <path d="M15 35c0 0 4-8 17-8s17 8 17 8" fill="none" stroke="currentColor" stroke-width="2"/>
+              </svg>
+            </div>
+            <h3>Premium Footwear</h3>
+            <p>Expertly crafted shoes for athletic performance and daily comfort</p>
+          </div>
+          <div class="service-item">
+            <div class="service-icon">
+              <svg width="64" height="64" viewBox="0 0 64 64">
+                <path d="M32 8L56 48H8L32 8z" fill="none" stroke="currentColor" stroke-width="4"/>
+                <circle cx="32" cy="40" r="4" fill="currentColor"/>
+                <rect x="30" y="20" width="4" height="12" fill="currentColor"/>
+              </svg>
+            </div>
+            <h3>Safety Equipment</h3>
+            <p>Reliable emergency and safety solutions for peace of mind</p>
+          </div>
+          <div class="service-item">
+            <div class="service-icon">
+              <svg width="64" height="64" viewBox="0 0 64 64">
+                <circle cx="32" cy="32" r="16" fill="none" stroke="currentColor" stroke-width="4"/>
+                <path d="M32 8v8 M32 48v8 M8 32h8 M48 32h8 M13.7 13.7l5.6 5.6 M44.7 44.7l5.6 5.6 M13.7 50.3l5.6-5.6 M44.7 19.3l5.6-5.6" stroke="currentColor" stroke-width="2"/>
+              </svg>
+            </div>
+            <h3>Solar Solutions</h3>
+            <p>Sustainable energy equipment for a greener future</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>About Us</h3>
+        <p>We're dedicated to providing the highest quality products and exceptional customer service. With years of experience in sustainable manufacturing and innovative design, we strive to exceed customer expectations while maintaining our commitment to environmental responsibility.</p>
+      </div>
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p><strong>Email:</strong> Jonas285797@gmail.com</p>
+        <p><strong>Phone:</strong> +86 193004417690</p>
+        <p><strong>Business Hours:</strong> Mon-Fri 9:00-18:00</p>
+        <p><strong>Location:</strong> Room 402, Ming Shi Garden Community, Phoenix Road, Chengxiang District, Putian City, Fujian Province, Mainland China</p>
+      </div>
+      <div class="footer-section">
+        <div class="social-links" style="display: flex; justify-content: space-between; align-items: center;">
+          <div class="qr-grid" style="display: flex; gap: 20px;">
+            <div class="qr-code">
+              <svg width="100" height="100" viewBox="0 0 100 100">
+                <img src="/resources/what‘sapp.png" width="150" height="150"/>
+              </svg>
+            </div>
+            <div class="qr-code">
+              <svg width="100" height="100" viewBox="0 0 100 100">
+                <img src="/resources/messenger.png" width="152" height="152">
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 Gearkingdom. All rights reserved. | Premium Quality Sustainable Products | Your Trusted Gear Partner</p>
+    </div>
+  </footer>
+
+  <div class="whatsapp-float">
+    <div class="whatsapp-notification">
+      Chat with us for quick orders!
+    </div>
+    <div class="whatsapp-button" id="whatsappButton">
+      <svg viewBox="0 0 24 24" fill="white">
+        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347"/>
+      </svg>
+    </div>
+    <div class="whatsapp-qr" id="whatsappQR">
+        <svg>
+          <img src="/resources/what‘sapp.png" width="150" height="150"/>
+        </svg>
+        <p>Scan to chat with us on WhatsApp</p>
+      </div>
+  </div>
+
+  <script type="module" src="script.js"></script>
+</body>
+</html>
