--- a/index.html
+++ b/index.html
@@ -76,36 +76,17 @@
         <p><strong>Location:</strong> Room 402, Ming Shi Garden Community, Phoenix Road, Chengxiang District, Putian City, Fujian Province, Mainland China</p>
       </div>
       <div class="footer-section">
-        <div class="social-links">
-          <div class="social-icons">
-            <a href="https://whatsapp.com" class="social-icon">
-              <svg viewBox="0 0 24 24" fill="white">
-                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347"/>
-              </svg>
-              <span>WhatsApp</span>
-            </a>
-            <a href="https://facebook.com" class="social-icon">
-              <svg viewBox="0 0 24 24" fill="white">
-                <path d="M12 0C5.373 0 0 5.373 0 12c0 5.989 4.388 10.952 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.008 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12c0-6.627-5.373-12-12-12z"/>
-              </svg>
-              <span>Facebook</span>
-            </a>
-          </div>
-          <div class="qr-grid">
+        <div class="social-links" style="display: flex; justify-content: space-between; align-items: center;">
+          <div class="qr-grid" style="display: flex; gap: 20px;">
             <div class="qr-code">
               <svg width="100" height="100" viewBox="0 0 100 100">
-                <rect x="10" y="10" width="80" height="80" fill="none" stroke="white"/>
-                <path d="M20 20h20v20h-20z M60 20h20v20h-20z M20 60h20v20h-20z" fill="white"/>
-                <path d="M45 45h10v10h-10z M60 45h10v10h-10z M45 60h10v10h-10z M60 60h10v10h-10z" fill="white"/>
+                <img src="/resources/what‘sapp.png" width="150" height="150"/>
               </svg>
-              <p>WhatsApp QR Code</p>
             </div>
             <div class="qr-code">
               <svg width="100" height="100" viewBox="0 0 100 100">
-                <rect x="10" y="10" width="80" height="80" fill="none" stroke="white"/>
-                <path d="M30 30h40v40h-40z M20 20h10v10h-10z M70 20h10v10h-10z M20 70h10v10h-10z M70 70h10v10h-10z" fill="white"/>
+                <img src="/resources/messenger.png" width="152" height="152">
               </svg>
-              <p>Facebook QR Code</p>
             </div>
           </div>
         </div>
@@ -126,10 +107,8 @@
       </svg>
     </div>
     <div class="whatsapp-qr" id="whatsappQR">
-      <svg width="160" height="160" viewBox="0 0 160 160">
-        <rect x="10" y="10" width="140" height="140" fill="none" stroke="#25D366" stroke-width="2"/>
-        <path d="M30 30h40v40h-40z M90 30h40v40h-40z M30 90h40v40h-40z" fill="#25D366"/>
-        <path d="M85 85h10v10h-10z M105 85h10v10h-10z M85 105h10v10h-10z M105 105h10v10h-10z" fill="#25D366"/>
+      <svg>
+        <img src="/resources/what‘sapp.png" width="150" height="150"/>
       </svg>
       <p>Scan to chat with us on WhatsApp</p>
     </div>
