<feat>[gears page]:"enable show product items when click product cards"

--- a/gears.html
+++ b/gears.html
@@ -89,6 +89,7 @@
       <div class="product-grid" id="categoryProducts">
         <!-- Products will be loaded here -->
       </div>
+      <div id="moreImagesContainer"></div>
     </section>
   </main>
 
