<update>[gears page and script]:"remove page landing section and upgrade product scripts"

--- a/gears.html
+++ b/gears.html
@@ -19,35 +19,8 @@
   </header>
 
   <main>
-    <section class="hero">
-      <div class="hero-content">
-        <h1>Explore Our Gear Collection</h1>
-        <p>Find the perfect gear for your needs</p>
-      </div>
-      
-      <div class="carousel">
-        <div class="carousel-container" id="carouselContainer">
-          <!-- Carousel slides will be loaded here -->
-        </div>
-        <div class="carousel-controls">
-          <button class="carousel-control prev" id="prevSlide">
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <path d="M15 18l-6-6 6-6" fill="none" stroke="currentColor" stroke-width="2"/>
-            </svg>
-          </button>
-          <div class="carousel-indicators" id="carouselIndicators">
-            <!-- Indicators will be added here -->
-          </div>
-          <button class="carousel-control next" id="nextSlide">
-            <svg width="24" height="24" viewBox="0 0 24 24">
-              <path d="M9 18l6-6-6-6" fill="none" stroke="currentColor" stroke-width="2"/>
-            </svg>
-          </button>
-        </div>
-      </div>
-    </section>
-
     <section class="category-section">
+      <h1>Our Product Categories</h1>
       <div class="category-grid">
         <div class="category-card" data-category="shoes">
           <div class="category-icon">
